# traceroute-spoof

./: Cargo.toml  README.md
funny-traceroute-aya/: Cargo.toml
funny-traceroute-aya-common/: Cargo.toml
funny-traceroute-aya-common/src/: lib.rs
funny-traceroute-aya-ebpf/: Cargo.toml
funny-traceroute-aya-ebpf/src/: main.rs
funny-traceroute-aya/src/: main.rs
xtask/src/: build_ebpf.rs
