[package]
name = "funny-traceroute-aya-ebpf"
version = "0.1.0"
edition = "2018"

[dependencies]
aya-bpf = { git = "http://github.com/aya-rs/aya", branch = "main" }
# aya-log-ebpf = { git = "https://github.com/aya-rs/aya-log", branch = "main" }
ufmt = "0.1"
jnet = { git = "https://github.com/simmsb/jnet.git", rev = "40bbc48254c88d669cbdc95bf2a5b86552cb689a" }
# jnet = { path = "../../jnet/" }
funny-traceroute-aya-common = { path = "../funny-traceroute-aya-common" }
byteorder = { version = "1.4.3", default-features = false }

[[bin]]
name = "funny-traceroute-aya"
path = "src/main.rs"

[profile.dev]
panic = "abort"
debug = 1
opt-level = 2
overflow-checks = false

[profile.release]
panic = "abort"

[workspace]
members = []
