[package]
name = "funny-traceroute-aya"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", branch="main", features=["async_tokio"] }
funny-traceroute-aya-common = { path = "../funny-traceroute-aya-common", features=["userspace"] }
anyhow = "1.0.42"
ctrlc = "3.2"
jnet = { git = "https://github.com/simmsb/jnet.git", rev = "2b5c94b0588bcdaf70eb058b6bd8641433250c8a" }

structopt = { version = "0.3"}
bytes = "1.1.0"
tokio = { version = "1.12.0", features = ["rt", "signal", "time", "io-util", "net", "sync"] }

[[bin]]
name = "funny-traceroute-aya"
path = "src/main.rs"
